[package]
name = "panic-serial"
version = "0.1.0"
edition = "2021"
categories = ["no-std", "embedded"]
keywords = ["panic", "serial", "arduino", "uart"]
description = "Print panics on serial port"
authors = ["Niklas Cathor"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = "0.2.0"

[features]
full = ["location", "message"]
location = []
message = []
